# propfarm

./: .gitignore  .pre-commit-config.yaml  README.md  STATUS.md  pyproject.toml
data/raw/fill_recordings/: bbf710b335f84e94af21b74cc3b5d725_report.md  bbf710b335f84e94af21b74cc3b5d725_residuals.parquet
docs/: phase-0-closing-summary.md
docs/adr/: 0001-goals-and-non-goals.md  0002-stack-lock-vectorbt-nautilus.md  0003-mt5-bridge-choice.md
docs/firm-tos-snapshots/: ftmo-commission-2026-05-12.md  ftmo-rules-2026-05-12.md  ftmo-swap-2026-05-12.md  fundednext-commission-2026-05-12.md  fundednext-rules-2026-05-12.md  fundednext-swap-2026-05-12.md  fundingpips-commission-2026-05-12.md  fundingpips-rules-2026-05-12.md  fundingpips-swap-2026-05-12.md
docs/runbooks/: bulk-fetch-dukascopy.md  gate-2b-comparison-runbook.md  gate-2b-fill-recording.md  mt5-spike-result.md  mt5-spike-runbook.md  spread-calibration-recording.md  wave-6d-stress-replay.md
docs/superpowers/plans/: 2026-05-12-phase-0-foundations.md
fixtures/: README.md  synthetic_returns.parquet  synthetic_returns.sha256
scripts/: bulk_fetch_dukascopy.py  download_dukascopy.py  generate_synthetic_returns.py  ingest_to_snapshot.py  record_fills.py  run_data_quality_report.py  run_gate_2b.py  run_placebo_gate.py  run_stress_replay.py  spike_mt5.py  spike_mt5_fallback_zmq.md
src/propfarm/: __init__.py
src/propfarm/data/: __init__.py  ingest.py  lookahead_linter.py  quality.py  reconcile.py  snapshot.py
src/propfarm/data/vendors/: __init__.py  dukascopy.py  histdata.py
src/propfarm/gates/: __init__.py  gate_2b.py
src/propfarm/placebo/: __init__.py  cost_reconciliation.py  gate.py  random_strategy.py
src/propfarm/rules/: __init__.py  ftmo.py  fundednext.py  fundingpips.py  predicates.py  registry.py  state_machine.py
src/propfarm/sim/: __init__.py  commission.py  fill_engine.py  market.py  slippage.py  spread.py  stress_replay.py  swap.py
src/propfarm/validation/: __init__.py  cpcv.py  dsr.py  monte_carlo.py  pbo.py  walkforward.py
tests/data/: _synthetic.py  conftest.py  test_dukascopy.py  test_histdata.py  test_ingest.py  test_lookahead_linter.py  test_quality.py  test_reconcile.py  test_snapshot.py
tests/fixtures/: test_synthetic_returns.py
tests/gates/: test_gate_2b.py
tests/placebo/: test_cost_reconciliation.py  test_placebo_gate.py
tests/rules/: __init__.py  test_ftmo.py  test_fundednext.py  test_fundingpips.py  test_state_machine.py
tests/scripts/: test_bulk_fetch_dukascopy.py  test_live_broker_validation.py  test_record_fills.py  test_spike_mt5.py
tests/sim/: test_commission.py  test_fill_engine.py  test_slippage.py  test_spread.py  test_stress_replay.py  test_swap.py
tests/validation/: test_cpcv.py  test_dsr.py  test_monte_carlo.py  test_pbo.py  test_walkforward.py
