[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "propfarm"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
  "polars>=1.0",
  "pandas>=2.2",
  "pyarrow>=15",
  "numpy>=1.26",
  "scipy>=1.13",
  "vectorbt>=0.27",
  "nautilus-trader>=1.190",
  "pandas-market-calendars>=4.4",
  "hypothesis>=6.100",
  "pydantic>=2.7",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "pre-commit>=3.7"]
mt5 = ["MetaTrader5>=5.0.45"]  # Windows-only; bridge runs on Windows VPS

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=src/propfarm --cov-report=term-missing -m 'not integration'"
testpaths = ["tests"]
markers = [
  "integration: live-network or external-resource tests; skipped by default (run with `pytest -m integration`).",
]

[tool.setuptools.packages.find]
where = ["src"]
