[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "propfarm"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
  "polars>=1.0",
  "pandas>=2.2",
  "pyarrow>=15",
  "numpy>=1.26",
  "scipy>=1.13",
  "vectorbt>=0.27",
  "nautilus-trader>=1.190",
  "pandas-market-calendars>=4.4",
  "hypothesis>=6.100",
  "pydantic>=2.7",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "pre-commit>=3.7"]
mt5 = ["MetaTrader5>=5.0.45"]  # Windows-only; bridge runs on Windows VPS

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=src/propfarm --cov-report=term-missing -m 'not integration'"
testpaths = ["tests"]
markers = [
  "integration: live-network or external-resource tests; skipped by default (run with `pytest -m integration`).",
  "live_broker_validation: live FTMO MT5 demo broker tests; gated on PROPFARM_LIVE_TEST=1 (run on the Windows VPS only — MT5 Python pkg is Windows-only).",
]

[tool.setuptools.packages.find]
where = ["src"]

# PEP 561 — include the ``py.typed`` marker in the wheel if/when the
# project is ever distributed externally. Editable installs already
# pick it up via the filesystem; this declaration is forward-defensive.
# Added 2026-05-19 per the α reviewer NIT (the broader mypy-hook switch
# from isolated venv to language=system surfaced the PEP-561 marker
# requirement; without `package-data`, an external wheel-consumer would
# silently fall back to untyped behaviour even though the in-tree
# annotations are intentional).
[tool.setuptools.package-data]
propfarm = ["py.typed"]
